# taskish

./: LICENSE  README.md  compose.dev.yaml  preview.sh
.github/workflows/: deploy.yaml
backend/: .env.dev.example  .env.example  .env.prod.example  .fastapicloudignore  .gitignore  pyproject.toml
backend/.zed/: settings.json
backend/scripts/: insert_request_attempts.py  insert_sample_auth_sessions.py  insert_sample_tasks.py
backend/src/: lifespan.py  main.py  middleware.py  router.py  schemas.py  session.py  settings.py  trash_router.py
backend/src/api/: __init__.py  auth.py  daily_tasks.py  export.py  request_attempts.py  tasks.py  trash.py
backend/src/api/dependencies/: request.py
backend/src/core/: lifespan.py  middleware.py  rate_limiting.py  settings.py
backend/src/core/middleware/: auth.py  rate_limiting.py  request_attempts.py  throttling.py
backend/src/db/: __init__.py  auth.py  daily_tasks.py  request_attempts.py  tasks.py
backend/src/repositories/: auth.py  daily_tasks.py  request_attempts.py  tasks.py
backend/src/schemas/: auth.py  config.py  daily_tasks.py  export.py  request_attempts.py  tasks.py  trash.py
backend/src/services/: auth.py  daily_tasks.py  request_attempts.py  tasks.py
backend/src/utils/: hashing.py  time.py
cli/: .gitignore  api.go  config.go  constants.go  go.mod  go.sum  init.go  main.go  prompt.go  tasks.go  trash.go
cli/commands/: init.go  tasks.go  trash.go
frontend/: .gitignore  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
hasher/: .env.example  .gitignore  pyproject.toml
(+114 files in other folders)
