[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cachetools>=7.1.4",
    "fastapi-crons>=2.3.0",
    "fastapi[standard]>=0.137.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.ruff.lint]
select = ["COM812"]

[dependency-groups]
dev = [
    "ruff>=0.15.22",
]
